CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.5

	- Documentation fixes (STR #3542)
	- Localization fixes (STR #3635, STR #3636)
	- The USB backend did not check whether the printer has a serial number
	  (STR #3590)
	- The lpadmin command did not support setting of custom option values
	  (STR #3631)
	- The lpadmin command did not support setting of the location or
	  description of a class (STR #3613)
	- The cupsaddsmb command did not give up after too many failed attempts
	  (STR #3615)
	- The CUPS library no longer uses certain problematic ctype macros that
	  change based on the locale's character set.
	- PJL value substitution of more than 9 values was broken (STR #3621)
	- Custom options with missing string values caused ppdEmit* to segfault
	  (STR #3620)
	- Fixed an issue with the Italian version of the web interface
	  (STR #3624)
	- Fixed the Solaris SMF configuration file for cups-lpd (STR #3611)
	- The scheduler did not set the notify-subscribed-event attribute when
	  delivering printer-added or printer-modified events (STR #3608)
	- The mailto notifier could get into an infinite loop (STR #3609)
	- Date/time information was not shown in banner pages.
	- Relational operators were broken in #if/#elif/#else/#endif expressions
	  for the PPD compiler.
	- Moving a job via the web interface failed without asking for
	  authentication (STR #3559)
	- The scheduler now clears the printer-state-reasons when the driver is
	  changed (STR #3570)
	- The web interface did not allow a user to change the driver
	  (STR #3537, STR #3601)
	- The scheduler was not setting the PATH_INFO environment variable when
	  needed (STR #3600)
	- The scheduler incorrectly set the CUPSD_AUTH_TYPE environment
	  variable instead of AUTH_TYPE (STR #3599)
	- Fixed a buffer overrun in the PPD compiler (STR #3594)
	- Fixed some additional IPP job template attribute mapping issues in the
	  scheduler.


CHANGES IN CUPS V1.4.4
